# fish-labeler

./: .gitignore  .secrets.baseline  main.py  pyproject.toml
core/: io_manager.py  logger.py  sam_engine.py  state.py  tracker.py  utils.py
tests/core/: test_io_manager.py  test_logger.py  test_state.py  test_tracker.py  test_utils.py
tests/ui/: test_main_window.py
themes/: dark.qss  light.qss
ui/: canvas.py  main_window.py
